# ConsoleCalculator

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  main.cpp
app/: main.cpp
app/include/: runner.h
app/src/: runner.cpp
core/include/: abacus.h  checker.h
core/include/interfaces/: icalculator.h
core/include/types/: calculator-data.h
core/src/: checker.cpp
include/: abacus.h  calculator.h  checker.h  init.h  initializer.h  parser.h  printer.h  runner.h
include/impl/: icalculator.h
include/types/: calculator-data.h  error-code.h  operation-code.h
io/include/: parser.h  printer.h
io/src/: printer.cpp
secrets/: cc_db_password.txt.example
src/: abacus.cpp  calculator.cpp  checker.cpp  init.cpp  initializer.cpp  logger.cpp  parser.cpp  printer.cpp  runner.cpp
storage/include/: cache-repository.h  operation-key.h  storage-service.h
storage/include/types/: operation-record.h
storage/postgres/include/: postgres-connection.h  postgres-repository.h  postgres-result.h
storage/postgres/src/: postgres-connection.cpp  postgres-repository.cpp  postgres-result.cpp
storage/src/: cache-repository.cpp  operation-key.cpp  storage-service.cpp
support/include/: exception.h  logger.h
support/include/types/: error-code.h
support/src/: logger.cpp
tests/: cache_repository_tests.cpp  checker_tests.cpp  operation_key_tests.cpp  parser_tests.cpp  printer_tests.cpp
